Cleaned up the code a bit. Updated the filterable conveyors to be able to filter multiple things. Added the Trap Door Conveyor.

--- a/src/main/resources/assets/simplyconveyors/lang/en_US.lang
+++ b/src/main/resources/assets/simplyconveyors/lang/en_US.lang
@@ -26,6 +26,7 @@ tile.blockGrabberMovingPath.name=Grabber Conveyor
 tile.blockBlockMovingPath.name=Block Conveyor
 tile.blockDetectorMovingBackwardsPath.name=Detector Inverse Conveyor
 tile.blockTransporterMovingPath.name=Item I/O Conveyor
+tile.blockTrapDoorMovingPath.name=Trap Door Conveyor
 
 tile.blockLowRangeItemPropeller.name=Item Propeller
 tile.blockMidRangeItemPropeller.name=Mid Range Item Propeller
