Add better translation for spikes

--- a/src/main/resources/assets/simplyconveyors/lang/ja_JP.lang
+++ b/src/main/resources/assets/simplyconveyors/lang/ja_JP.lang
@@ -29,6 +29,6 @@ tile.conveyor_block.name=ブロックコンベヤーベルト
 tile.conveyor_backwards_detector.name=ディテクター逆さコンベヤーベルト
 tile.conveyor_transporter.name=アイテムI/Oコンベヤーベルト
 tile.conveyor_trapdoor.name=トラップドアコンベヤーベルト
-tile.conveyor_spike_slow.name=遅い棘コンベヤーベルト
-tile.conveyor_spike_fast.name=速い棘コンベヤーベルト
-tile.conveyor_spike_fastest.name=高速棘コンベヤーベルト
+tile.conveyor_spike_slow.name=遅い釘コンベヤーベルト
+tile.conveyor_spike_fast.name=速い釘コンベヤーベルト
+tile.conveyor_spike_fastest.name=高速釘コンベヤーベルト
